# aoc-2024

./: README.adoc  pyproject.toml
day-01/: README.adoc  day_01.py  solution.py  solution_test.py  test_day_01.py
day-02/: README.adoc  day_02.py  solution_test.py  test_day_02.py
day-03/: README.adoc  day_03.py  solution_test.py  test_day_03.py
day-04/: README.adoc  day_04.py  solution.py  solution_test.py  test_day_04.py
day-05/: README.adoc  day_05.py  solution_test.py  test_day_05.py
day-06/: README.adoc  solution.py  solution_test.py  test_day_06.py
day-07/: README.adoc  solution.py  solution_test.py
day-08/: README.adoc  solution.py  solution_test.py
day-09/: README.adoc  solution.py  solution_test.py
day-10/: README.adoc  solution.py  solution_test.py
day-11/: README.adoc  solution.py  solution_test.py
day-12/: README.adoc  solution.py  solution_test.py
day-13/: README.adoc  solution.py  solution_test.py
day-14/: README.adoc  solution.py  solution_test.py
day-15/: README.adoc  solution.py  solution_test.py
day-16/: README.adoc  solution.py  solution_test.py
day-17/: solution.py  solution_test.py
day-18/: README.adoc  solution.py  solution_test.py
day-19/: README.adoc  solution.py  solution_test.py
day-20/: README.adoc  solution.py  solution_test.py
day-21/: README.adoc  solution.py  solution_test.py
day-22/: README.adoc  solution.py  solution_test.py
day-23/: README.adoc  solution.py  solution_test.py
day-24/: README.adoc  solution_test.py
template/: README.adoc  solution.py
