[tool.poetry]
name = "aoc-2024"
version = "1.0.0"
description = "My solutions for the advent of code in 2024"
authors = ["Christian Drumm"]
readme = "README.adoc"
package-mode=false

[tool.poetry.dependencies]
python = "^3.13"
typer = "^0.12.5"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.7"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
